// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid 1`] = `
Array [
  <div
    class="Row-sc-1f9abgs-0 jqKtpu"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      1
    </div>
  </div>,
  <div
    class="Row-sc-1f9abgs-0 jqKtpu"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 fBNJND"
      offset="0"
      size="6"
    >
      One of two columns
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 fBNJND"
      offset="0"
      size="6"
    >
      One of two columns
    </div>
  </div>,
  <div
    class="Row-sc-1f9abgs-0 jqKtpu"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 hiAfBn"
      offset="0"
      size="4"
    >
      One of three columns
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 hiAfBn"
      offset="0"
      size="4"
    >
      One of three columns
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 hiAfBn"
      offset="0"
      size="4"
    >
      One of three columns
    </div>
  </div>,
  <div
    class="Row-sc-1f9abgs-0 jqKtpu"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 dwEruz"
      offset="0"
      size="3"
    >
      One of four columns
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 dwEruz"
      offset="0"
      size="3"
    >
      One of four columns
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 dwEruz"
      offset="0"
      size="3"
    >
      One of four columns
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 dwEruz"
      offset="0"
      size="3"
    >
      One of four columns
    </div>
  </div>,
]
`;

exports[`Grid adaptive 1`] = `
Array [
  <div
    class="Row-sc-1f9abgs-0 jqKtpu"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 jdiNzz"
      offset="0"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 kyNTyn"
      offset="0"
    >
      2
    </div>
  </div>,
  <div
    class="Row-sc-1f9abgs-0 jqKtpu"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 fARQCD"
      offset="[object Object]"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 fdNpvP"
      offset="0"
    >
      2
    </div>
  </div>,
]
`;

exports[`Grid w align 1`] = `
Array [
  <div
    class="Row-sc-1f9abgs-0 hvzxOX"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 kBeztn"
      offset="0"
      size="2"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 kBeztn"
      offset="0"
      size="2"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 kBeztn"
      offset="0"
      size="2"
    >
      1
    </div>
  </div>,
  <div
    class="Row-sc-1f9abgs-0 JfKSG"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 kBeztn"
      offset="0"
      size="2"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 kBeztn"
      offset="0"
      size="2"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 kBeztn"
      offset="0"
      size="2"
    >
      1
    </div>
  </div>,
  <div
    class="Row-sc-1f9abgs-0 dniXrk"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 kBeztn"
      offset="0"
      size="2"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 kBeztn"
      offset="0"
      size="2"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 kBeztn"
      offset="0"
      size="2"
    >
      1
    </div>
  </div>,
  <div
    class="Row-sc-1f9abgs-0 cxqmTn"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 kBeztn"
      offset="0"
      size="2"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 kBeztn"
      offset="0"
      size="2"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 kBeztn"
      offset="0"
      size="2"
    >
      1
    </div>
  </div>,
  <div
    class="Row-sc-1f9abgs-0 kIVIMa"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 kBeztn"
      offset="0"
      size="2"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 kBeztn"
      offset="0"
      size="2"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 kBeztn"
      offset="0"
      size="2"
    >
      1
    </div>
  </div>,
  <div
    class="Row-sc-1f9abgs-0 qhQGs"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 izyobK"
      offset="0"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 izyobK"
      offset="0"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 izyobK"
      offset="0"
    >
      1
    </div>
  </div>,
]
`;

exports[`Grid w valign 1`] = `
Array [
  <div
    class="Row-sc-1f9abgs-0 jATAOT"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 fBNJND"
      offset="0"
      size="6"
    >
      Tall column
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 fBNJND"
      offset="0"
      size="6"
    >
      top
    </div>
  </div>,
  <div
    class="Row-sc-1f9abgs-0 gxtyku"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 fBNJND"
      offset="0"
      size="6"
    >
      Tall column
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 fBNJND"
      offset="0"
      size="6"
    >
      middle
    </div>
  </div>,
  <div
    class="Row-sc-1f9abgs-0 gaWcA"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 fBNJND"
      offset="0"
      size="6"
    >
      Tall column
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 fBNJND"
      offset="0"
      size="6"
    >
      bottom
    </div>
  </div>,
  <div
    class="Row-sc-1f9abgs-0 jqKtpu"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 fBNJND"
      offset="0"
      size="6"
    >
      Tall column
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 fBNJND"
      offset="0"
      size="6"
    >
      bottom
    </div>
  </div>,
]
`;

exports[`Grid w/ columnGap 1`] = `
Array [
  <div
    class="Row-sc-1f9abgs-0 jqKtpu"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      24
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      24
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      24
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      24
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      24
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      24
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      24
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      24
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      24
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      24
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      24
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      24
    </div>
  </div>,
  <div
    class="Row-sc-1f9abgs-0 eVascn"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      12
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      12
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      12
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      12
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      12
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      12
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      12
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      12
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      12
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      12
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      12
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      12
    </div>
  </div>,
  <div
    class="Row-sc-1f9abgs-0 fSFwUl"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      5
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      5
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      5
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      5
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      5
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      5
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      5
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      5
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      5
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      5
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      5
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      5
    </div>
  </div>,
  <div
    class="Row-sc-1f9abgs-0 gejdTA"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      0
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      0
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      0
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      0
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      0
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      0
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      0
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      0
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      0
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      0
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      0
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cKjCxT"
      offset="0"
      size="1"
    >
      0
    </div>
  </div>,
]
`;

exports[`Grid w/ offset 1`] = `
Array [
  <div
    class="Row-sc-1f9abgs-0 jqKtpu"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 eYwmTN"
      offset="11"
      size="1"
    >
      1
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 fLlrSU"
      offset="10"
      size="2"
    >
      2
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 gVaJdI"
      offset="9"
      size="3"
    >
      3
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 iXDlx"
      offset="8"
      size="4"
    >
      4
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 kbORJT"
      offset="7"
      size="5"
    >
      5
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 cUxthn"
      offset="6"
      size="6"
    >
      6
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 kPmTjI"
      offset="5"
      size="7"
    >
      7
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 iWsSra"
      offset="4"
      size="8"
    >
      8
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 eTJpSl"
      offset="3"
      size="9"
    >
      9
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 hafaXP"
      offset="2"
      size="10"
    >
      10
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 dVEHgM"
      offset="1"
      size="11"
    >
      11
    </div>
  </div>,
  <div
    class="Row-sc-1f9abgs-0 jqKtpu"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 bKLlkt"
      offset="3"
      size="3"
    >
      offset: 3
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 gyKQGD"
      offset="2"
      size="3"
    >
      offset: 2
    </div>
  </div>,
  <div
    class="Row-sc-1f9abgs-0 jqKtpu"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 dwEruz"
      offset="0"
      size="3"
    >
      size 3
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 gqmUcd"
      offset="3"
      size="2"
    >
      size 2
    </div>
    <div
      class="Colstyles__Box-sc-5cweqm-0 dgvfNV"
      offset="3"
      size="1"
    >
      1
    </div>
  </div>,
]
`;

exports[`Grid w/ rowGap 1`] = `
Array [
  <div
    class="Row-sc-1f9abgs-0 zEGIv"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 RMCpn"
      offset="0"
      size="12"
    >
      5px row gap
    </div>
  </div>,
  <div
    class="Row-sc-1f9abgs-0 cjdkgr"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 RMCpn"
      offset="0"
      size="12"
    >
      10px row gap
    </div>
  </div>,
  <div
    class="Row-sc-1f9abgs-0 jqKtpu"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 RMCpn"
      offset="0"
      size="12"
    >
      No row gap
    </div>
  </div>,
  <div
    class="Row-sc-1f9abgs-0 jqKtpu"
  >
    <div
      class="Colstyles__Box-sc-5cweqm-0 RMCpn"
      offset="0"
      size="12"
    >
      No row gap
    </div>
  </div>,
]
`;
